-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5, 6.6
-
None
-
Fedora 37
-
-
ca36bfe3f (dev), ef827859f (6.5)
When building Qt from current dev (qt5.git commit e266a9e6040e07cace330ba43b0372e04f39e102) code that does "#include <QWebSocketProtocol>" fails to build because the header isn't found. It works as expected with distro-provided Qt 6.4.1
Running "find /usr/include -iname "QWebSocketProtocol"" shows
/usr/include/qt6/QtWebSockets/6.4.1/QtWebSockets/private/qwebsocketprotocol_p.h
/usr/include/qt6/QtWebSockets/QWebSocketProtocol
/usr/include/qt6/QtWebSockets/qwebsocketprotocol.h
Running it on the self-built Qt from dev ("find /home/nico/qt6 -iname "QWebSocketProtocol"") shows
/home/nico/qt6/include/QtWebSockets/qwebsocketprotocol.h
/home/nico/qt6/include/QtWebSockets/6.6.0/QtWebSockets/private/qwebsocketprotocol_p.h
include/qt6/QtWebSockets/QWebSocketProtocol is missing
| For Gerrit Dashboard: QTBUG-110150 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 454263,4 | Add the missing QWebSocketProtocol header file | dev | qt/qtwebsockets | Status: MERGED | +2 | 0 |
| 454340,2 | Add the missing QWebSocketProtocol header file | 6.5 | qt/qtwebsockets | Status: MERGED | +2 | 0 |