Add the missing QWebSocketProtocol header file

Namespaces don't generate the symbol-based CaMeL header files.
Force syncqt.cpp to generate the header file using qt_class pragma.

Fixes: QTBUG-110150
Change-Id: Ib9825226d10eeec55bd491eaef9dadeefef3da01
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit ca36bfe3fdab36c754b53e9468d638bbed4a76a5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>